app/assets/stylesheets/_forms.css.scss
@import 'utilities';

$form_label–width: 225px;

.field_with_errors {
  background-color: #c00;
  padding: 0 0 2px;
  
  label {
    color: #fff;
  }
}

#error_explanation {
  width: 450px;
  border: 2px solid #c00;
  padding: 7px;
  padding-bottom: 0;
  margin-bottom: 20px;
  background-color: #f0f0f0;
  
  h2 {
    text-align: left;
    font-weight: bold;
    padding: 5px 5px 5px 15px;
    font-size: 12px;
    margin: -7px;
    margin-bottom: 0px;
    background-color: #c00;
    color: #fff;
  }
  
  ul li {
    font-size: 12px;
    list-style: square;
  }
}

.row_with_errors {
  border: 2px solid red;
}

form {
  input[type=button],
  input[type=color],
  input[type=date],
  input[type=datetime],
  input[type=datetime-local],
  input[type=email],
  input[type=file],
  input[type=month],
  input[type=number],
  input[type=password],
  input[type=search],
  input[type=submit],
  input[type=tel],
  input[type=text],
  input[type=time],
  input[type=url],
  input[type=week],
  a.button span {
    height:1.2em;
    padding:3px 5px;
  }
  
  input[type=button],
  input[type=submit] {
    height:2em;
  }

  select {
    height:auto;
    padding:3px 0;
  }
  
  textarea {
    padding:3px 5px;
  }

  input[type=submit]:hover {
    cursor:pointer;
  }
  
  input[type=checkbox] {
    float:left;
    height:1em;
    margin:1px 8px 0 0;
    padding:0;
    width:16px;
  }
}

fieldset {
  border:0 none;
  margin:0 0 14px;
  padding:0;

  legend {
    color:#333;
    font-weight:700;
    margin:0 0 6px 0;
  }
}

.field {
  overflow:hidden;
  padding:0 0 17px;
  
  label {
    float:left;
    padding:4px 10px 0 0;
    width:$form_label–width;
  }
  
  &.field-with-checkbox {    
    label {
      width:auto;
      float:none;
      padding:0;
    }
  }
}

.buttons-holder {
  background: url(image-path("sprite1.png")) no-repeat 100% -438px;
  display: inline-block;
  padding:1px 6px 0 0;
  overflow:hidden;
  /* text-align:right; */

  &.field-align {
    margin-left:$form_label–width;
  }

  input[type=button].button,input[type=submit].button,a.button span {
    background:url(image-path("sprite1.png")) no-repeat 0 -410px;
    border:0;
    color:#fff;
    height:27px;
    line-height:26px;
    margin:0 0 0 7px;
    padding:0 14px 2px 20px;
    
    &:first-child {
      margin-left:0;
    }
  }
  
  a.button {
    background: url(image-path("sprite1.png")) no-repeat 100% -439px;
    color:#fff;
    display: inline-block;
    overflow:hidden;
    padding:0 6px 0 0;
    
    span {
      display: inline-block;
    }

    &.button-cancel {
      background:url(image-path("sprite1.png")) no-repeat 100% -379px;    

      span {
        background:url(image-path("sprite1.png")) no-repeat 0 -350px;
      }
    }

    &:hover {
      text-decoration:none;
    }
  }
  
}

/*
#sidebar,#content {
  form.form-holder {
    border-style:none;
    margin:0;
    padding:0;

    input,textarea,select {
      font:14px "Helvetica Neue", Helvetica, Arial, sans-serif;
      vertical-align:middle;
    }

    input[type=text],input[type=password],input[type=file],input[type=submit],textarea {
      -webkit-appearance:none;
      -webkit-border-radius:0;
    }

    input[type=submit]:hover {
      cursor:pointer;
    }
  
    input[type=submit].button {
      background:url(image-path("sprite1.png")) no-repeat 0 -310px;
      border:0;
      color:#fff;
      height:26px;
      line-height:26px;
      margin:0 0 0 7px;
      padding:0 0 2px;
      width:63px;
    }  

    .buttons-holder {
      overflow:hidden;
      padding:0 1px 0 0;
      text-align:right;
    }
  }
}
*/


/* Specific forms */
/*
.form-update {
  font-size:14px;
  line-height:16px;
  padding:23px 37px;
  width:544px;
}

.form-comment {
  padding:1px 0 11px;
}

.form-search {
  background:url(image-path("sprite1.png")) no-repeat 0 -160px;
  margin:0 0 27px;
  overflow:hidden;
  width:198px;
}

.form-filter {
  margin:0 0 23px;
}
*/




/*
#content .form-update h2 {
  color:#303030;
  font-weight:normal;
  margin:0 0 20px;
}


.form-holder .opener {
  background:url(image-path("bg-opener.png")) no-repeat;
  float:right;
  margin:-2px 0 0;
  padding:1px 0 3px 22px;
}

.form-holder {
  float:right;
  width:296px;
}

.description .form-holder {
  margin:-2px 0 0;
  overflow:hidden;
  padding:2px 0 0;
}

.activities-section .form-holder heading {
  margin:0 1px 10px 0;
}

.form-update input[type=text],.form-update input[type=password] {
  background:#fff;
  border:1px solid #ccc;
  color:#666;
  float:left;
  font:12px/15px 'Open Sans', Arial, Helvetica, sans-serif;
  height:15px;
  margin:0;
  padding:3px 5px;
  width:233px;
}

.form-update .btn-holder {
  background:url(image-path("sprite1.png")) no-repeat 100% -279px;
  float:right;
  margin:21px 0 0;
  padding:0 6px 0 0;
}

.form-update .btn-frame {
  background:url(image-path("sprite1.png")) no-repeat 0 -250px;
  float:right;
}

.form-update input[type=submit] {
  background:none;
  border:0;
  color:#fff;
  float:left;
  font:600 13px/29px 'Open Sans', Arial, Helvetica, sans-serif;
  height:29px;
  margin:0 -6px 0 0;
  padding:0 0 6px;
  width:135px;
}

input[type=checkbox] {
  float:left;
  height:15px;
  margin:1px 8px 0 0;
  padding:0;
  width:16px;
}

.form-filter {
  margin:0 0 23px;
}

.form-filter heading {
  margin:0 0 18px;
  overflow:hidden;
  padding:0 2px;
}

.form-filter h2 {
  color:#333;
  float:left;
  font-size:14px;
  font-weight:700;
  line-height:16px;
  margin:0;
}

input[type=submit] {
  background:url(image-path("sprite1.png")) no-repeat 0 -310px;
  border:0;
  color:#fff;
  height:26px;
  line-height:26px;
  margin:0 0 0 7px;
  padding:0 0 2px;
  width:63px;
}

.btn-cancel span {
  background:url(image-path("sprite1.png")) no-repeat 0 -350px;
  float:left;
  padding:4px 4px 6px 9px;
}

.btn-cancel {
  background:url(image-path("sprite1.png")) no-repeat 100% -376px;
  color:#fff;
  display:inline-block;
  font:14px/16px "Helvetica Neue", Helvetica, Arial, sans-serif;
  padding:0 6px 0 0;
  vertical-align:top;
}

.buttons-holder {
  overflow:hidden;
  padding:0 1px 0 0;
  text-align:right;
}

.form-comment textarea {
  max-width:281px;
  min-width:281px;
}

.form-holder .opener {
  background:url(image-path("bg-opener.png")) no-repeat;
  float:right;
  margin:-2px 0 0;
  padding:1px 0 3px 22px;
}

.form-holder heading {
  margin:0 1px 10px 0;
}

.form-holder {
  margin:-2px 0 0;
  overflow:hidden;
  padding:2px 0 0;
}

.form-holder {
  float:right;
  width:296px;
}

.form-holder {
  margin:-2px 0 0;
  overflow:hidden;
  padding:2px 0 0;
}

.activities-section .form-holder heading {
  margin:0 1px 10px 0;
}
*/

